Add Gradle kotlin-dsl scripts and wrapper